# tinydynamics

./: README.md  TODO.md  pyproject.toml
examples/: simulate.py
src/tinydynamics/: __init__.py
src/tinydynamics/analysis/: __init__.py  trajectory.py
src/tinydynamics/core/: dynamics.py  lambda_state.py  policy.py  potentials.py  state.py  teacher.py
src/tinydynamics/plotting/: __init__.py  trajectory.py
