[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tinydynamics"
version = "0.1.0"
description = "A tiny dynamics simulation library using JAX"
requires-python = ">=3.11"

dependencies = [
    "jax",
    "jaxlib",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["src"]
